2007-09-05  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (i386_index_check): Don't use RegRex
	on the reg_type field.
	(parse_real_register): Use `||' instead of `|'.

2007-09-04  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (process_operands): Remove segment override
	check on SVME instructions.
	(i386_index_check): Remove memory operand check on SVME
	instructions.

2007-09-04  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-spu.c (struct spu_insn): Delete "flag".  Add "reloc".
	(md_assemble): Update init of insn.  Use insn.reloc instead of
	calculating from flag.
	(get_imm): Set reloc rather than flag.
	(calcop): Formatting.

2007-08-29  Daniel Jacobowitz  <dan@codesourcery.com>

	* dwarf2dbg.c (dwarf2_directive_loc): Emit duplicate .loc directives.

2007-08-28  Daniel Jacobowitz  <dan@codesourcery.com>

	* doc/c-arc.texi: Fix typo.

2007-08-28  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (process_suffix): Handle cmpxchg8b in
	Intel mode.

2007-08-28  Nathan Sidwell  <nathan@codesourcery.com>

	* config/tc-m68k.c (mcf52235_ctrl): Add cache registers.
	(mcf5253_ctrl): Add RAMBAR, MBAR, MBAR2.
	(mcf5407_ctrl): New.
	(m68k_cpus): Adjust 5407 entry.

2007-08-28  Maxim Kuvyrkov  <maxim@codesourcery.com>

	* config/tc-m68k.c (mcf51qe_ctrl): Define 51QE control registers.
	(m68k_cpus): Define 51QE cpu.

2007-08-28  Mark Shinwell  <shinwell@codesourcery.com>
	    Joseph Myers  <joseph@codesourcery.com>

	* as.c (main): Flush stderr before printing listings to ensure
	consistent output order across platforms.

2007-08-28  Robert Sebastian Gerus  <arachnist@gmail.com>

	* configure.tgt: Add support for i[3-7]86-*-dragonfly*.

2007-08-24  Joseph Myers  <joseph@codesourcery.com>
	    Paul Brook  <paul@codesourcery.com>

	* remap.c: New.
	* as.h (remap_debug_filename, add_debug_prefix_map): Declare.
	* as.c (show_usage): Document --debug-prefix-map option.
	(parse_args): Handle --debug-prefix-map.