@@ -1,3 +1,9 @@
+2007-09-06  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* config/tc-i386.c (match_template): Handle invlpga, vmload,
+	vmrun and vmsave in SVME.
+	(process_suffix): Likewise.
+
 2007-09-05  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* config/tc-i386.c (i386_index_check): Don't use RegRex
